--- a/style/header.scss
+++ b/style/header.scss
@@ -7,7 +7,7 @@ header {
 
         a {
             h1 {
-                font-size: 24px;
+                font-size: 26px;
             }
         }
 
@@ -18,6 +18,16 @@ header {
                 li {
                     padding: 12px 12px;
                 }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 599px) {
+    header {
+        nav {
+            ul {
+                display: none;
             }
         }
     }
