--- a/style/default.scss
+++ b/style/default.scss
@@ -7,8 +7,12 @@
     box-sizing: border-box;
 }
 
+body {
+    width: 100%;
+}
+
 main {
-    padding: 0 20px;
+    padding: 0;
     margin: 0 auto;
 }
 
