--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,24 @@
-main h1 {
-  font-size: 26px;
+main .container {
+  background-color: lavenderblush;
+  padding: 60px 20px;
+}
+main .container img {
+  display: block;
+  margin: 0 auto;
+  width: 140px;
+  height: 140px;
+}
+main .container h1 {
+  font-size: 24px;
   text-align: center;
   margin: 20px 0;
+}
+main .container p {
+  font-size: 18px;
+}
+main h2 {
+  padding: 16px 0;
+}
+main p {
+  padding: 10px 0;
 }/*# sourceMappingURL=style.css.map */
