--- a/style/style.scss
+++ b/style/style.scss
@@ -1,7 +1,31 @@
 main {
-    h1 {
-        font-size: 26px;
-        text-align: center;
-        margin: 20px 0;
+    .container {
+        background-color: lavenderblush;
+        padding: 60px 20px;
+
+        img {
+            display: block;
+            margin: 0 auto;
+            width: 140px;
+            height: 140px;
+        }
+
+        h1 {
+            font-size: 24px;
+            text-align: center;
+            margin: 20px 0;
+        }
+
+        p {
+            font-size: 18px;
+        }
+    }
+
+    h2 {
+        padding: 16px 0;
+    }
+
+    p {
+        padding: 10px 0;
     }
 }
