update: 全体的にcssを整えた

--- a/style/header.css
+++ b/style/header.css
@@ -1,6 +1,7 @@
 header nav {
   display: flex;
   justify-content: space-between;
+  border-bottom: 1px #888 solid;
 }
 header nav a.logo {
   display: flex;
