--- a/style/header.scss
+++ b/style/header.scss
@@ -2,6 +2,7 @@ header {
     nav {
         display: flex;
         justify-content: space-between;
+        border-bottom: 1px #888 solid;
 
         a.logo {
             display: flex;
