--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,12 @@
 main .container {
-  padding: 40px 20px;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 60px 20px;
 }
 main .container h1 {
   font-size: 24px;
   text-align: center;
-  margin: 22px 0;
+  margin: 36px 0;
 }
 main .container h2 {
   padding: 20px 0;
@@ -12,9 +14,10 @@ main .container h2 {
 main .container h3 {
   font-size: 18px;
   padding: 10px 0;
+  margin: 30px 0 0;
 }
 main .container p {
-  padding: 10px 0;
+  padding: 20px 0;
   font-size: 16px;
 }
 main .container img {
@@ -23,8 +26,10 @@ main .container img {
   width: 140px;
   height: 140px;
 }
-main .top {
+main .wrapper.top {
   background-color: #ffefef;
+}
+main .container.top2 {
   padding: 60px 20px;
 }
 main .green {
@@ -32,4 +37,19 @@ main .green {
 }
 main .blue {
   background-color: #efefff;
+}
+
+@media screen and (max-width: 599px) {
+  main .container {
+    padding: 40px 20px;
+  }
+  main .container h1 {
+    margin: 22px 0;
+  }
+  main .container h3 {
+    margin: 0;
+  }
+  main .container p {
+    padding: 14px 0;
+  }
 }/*# sourceMappingURL=style.css.map */
