--- a/style/style.scss
+++ b/style/style.scss
@@ -1,11 +1,13 @@
 main {
     .container {
-        padding: 40px 20px;
+        max-width: 1000px;
+        margin: 0 auto;
+        padding: 60px 20px;
 
         h1 {
             font-size: 24px;
             text-align: center;
-            margin: 22px 0;
+            margin: 36px 0;
         }
 
         h2 {
@@ -15,10 +17,11 @@ main {
         h3 {
             font-size: 18px;
             padding: 10px 0;
+            margin: 30px 0 0;
         }
 
         p {
-            padding: 10px 0;
+            padding: 20px 0;
             font-size: 16px;
         }
 
@@ -30,8 +33,11 @@ main {
         }
     }
 
-    .top {
+    .wrapper.top {
         background-color: #ffefef;
+    }
+
+    .container.top2 {
         padding: 60px 20px;
     }
 
@@ -41,5 +47,25 @@ main {
 
     .blue {
         background-color: #efefff;
+    }
+}
+
+@media screen and (max-width: 599px) {
+    main {
+        .container {
+            padding: 40px 20px;
+
+            h1 {
+                margin: 22px 0;
+            }
+            
+            h3 {
+                margin: 0;
+            }
+
+            p {
+                padding: 14px 0;
+            }
+        }
     }
 }
