--- a/style/header.scss
+++ b/style/header.scss
@@ -22,7 +22,8 @@ header {
         }
 
         ul {
-            display: flex;
+            display: none;
+            // display: flex;
             padding: 0 8px;
 
             a {
