--- a/style/footer.css
+++ b/style/footer.css
@@ -1,7 +1,24 @@
 footer {
-  padding: 40px 20px 10px;
+  margin: 30px 0 0;
+  background-color: #f6f2f2;
 }
-footer p.copyright {
+footer .container {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 18px;
+}
+footer .container img {
+  display: block;
+  width: 24px;
+  height: 24px;
+  opacity: 0.4;
+}
+footer .container p.copyright {
   text-align: center;
   font-size: 12px;
+  padding: 6px 0;
+  opacity: 0.6;
+  line-height: 1em;
 }/*# sourceMappingURL=footer.css.map */
