--- a/style/footer.scss
+++ b/style/footer.scss
@@ -9,11 +9,12 @@ footer {
         margin: 0 auto;
         padding: 18px;
 
-        img {
+        svg {
             display: block;
             width: 24px;
             height: 24px;
             opacity: 0.4;
+            fill: black;
         }
 
         p.copyright {
@@ -23,5 +24,6 @@ footer {
             opacity: 0.6;
             line-height: 1em;
         }
+        
     }
 }
