--- a/style/default.css
+++ b/style/default.css
@@ -26,4 +26,4 @@ span {
 
 *:not(.katex *) {
   font-family: "Quicksand", "游ゴシック体", "Yu Gothic", YuGothic, "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
-}/*# sourceMappingURL=default.css.map */
+}
