--- a/style/footer.css
+++ b/style/footer.css
@@ -22,4 +22,4 @@ footer .container p.copyright {
   padding: 6px 0;
   opacity: 0.6;
   line-height: 1em;
-}/*# sourceMappingURL=footer.css.map */
+}
