--- a/style/default.css
+++ b/style/default.css
@@ -12,6 +12,12 @@ body {
   width: 100%;
 }
 
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 60px 20px;
+}
+
 li {
   line-height: 1em;
 }
