--- a/style/default.scss
+++ b/style/default.scss
@@ -11,7 +11,11 @@ body {
     width: 100%;
 }
 
-
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 60px 20px;
+}
 
 li {
     line-height: 1em;
