--- a/style/about.css
+++ b/style/about.css
@@ -33,6 +33,16 @@ main .green {
 main .blue {
   background-color: #efefff;
 }
+main a.contribute {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  font-weight: 800;
+  color: #0066cc;
+}
+main .last {
+  padding: 80px 20px;
+}
 
 @media screen and (max-width: 599px) {
   main .container {
