--- a/style/header.scss
+++ b/style/header.scss
@@ -26,11 +26,12 @@ header {
             padding: 0 8px;
 
             a {
-                margin: 20px 12px;
+                margin: 20px 16px;
 
                 li {
                     font-size: 14px;
                     line-height: 1em;
+                    font-weight: 600;
                 }
             }
         }
