--- a/style/footer.scss
+++ b/style/footer.scss
@@ -1,6 +1,8 @@
 footer {
-    margin: 30px 0 0;
     background-color: #f6f2f2;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 
     .container {
         display: flex;
