--- a/style/about.css
+++ b/style/about.css
@@ -5,6 +5,7 @@ main .container h1 {
 }
 main .container h2 {
   padding: 20px 0;
+  text-align: center;
 }
 main .container h3 {
   font-size: 18px;
@@ -15,11 +16,12 @@ main .container p {
   padding: 20px 0;
   font-size: 16px;
 }
-main .container img {
+main .container svg.logo {
   display: block;
   margin: 0 auto;
   width: 140px;
   height: 140px;
+  fill: #31beff;
 }
 main .wrapper.top {
   background-color: #ffefef;
@@ -50,6 +52,9 @@ main .last {
   }
   main .container h1 {
     margin: 22px 0;
+  }
+  main .container h1 .dot {
+    display: none;
   }
   main .container h3 {
     margin: 0;
