--- a/style/contribute.css
+++ b/style/contribute.css
@@ -1,3 +1,7 @@
+main .container {
+  padding: 0 20px;
+  margin: 60px auto;
+}
 main .container h1 {
   text-align: center;
   font-size: 24px;
@@ -17,14 +21,49 @@ main .container h1 span.fermat {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+main .container h2 {
+  font-size: 20px;
+  padding: 20px 0;
+  margin: 20px 0 0;
+}
+main .container a.link-card {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 100%;
+  margin: 10px auto;
+  border: solid #333 2px;
+  border-radius: 14px;
+  overflow: hidden;
+}
+main .container a.link-card p.title {
+  font-size: 18px;
+  font-weight: 600;
+  padding: 4px 20px;
+  line-height: 1em;
+}
+main .container a.link-card p.url {
+  font-size: 12px;
+  padding: 2px 20px;
+  line-height: 1em;
+}
+main .container a.link-card img {
+  width: 200px;
+}
+main .container img.full-img {
+  width: 100%;
+  border-radius: 14px;
+  margin: 20px 0;
+}
+main .container p {
+  padding: 10px 0;
+}
+main .container p a {
+  color: #0066cc;
+  font-weight: 600;
+}
 
 @media screen and (max-width: 599px) {
-  main .container {
-    padding: 40px 20px;
-  }
-  main .container.top {
-    padding: 40px 10px;
-  }
   main .container h1 {
     font-size: 22px;
   }
@@ -33,5 +72,11 @@ main .container h1 span.fermat {
   }
   main .container h1 span.fermat {
     font-size: 28px;
+  }
+  main .container a.link-card p.title, main .container a.link-card p.url {
+    padding: 2px 14px;
+  }
+  main .container a.link-card img {
+    width: 160px;
   }
 }
