update: 公開用に削ぎ落とし

--- a/style/article_index.css
+++ b/style/article_index.css
@@ -1,14 +1,14 @@
 .container {
-  padding: 40px 20px;
+  padding: 20px;
 }
 .container h1 {
-  margin: 20px 0;
+  margin: 16px 0;
   padding: 0 10px;
   font-size: 26px;
 }
 .container a.article {
   display: block;
-  padding: 34px 10px;
+  padding: 8px 10px;
   border-top: solid #bbb 1px;
 }
 .container a.article:last-child {
@@ -16,12 +16,12 @@
 }
 .container a.article h2 {
   font-size: 20px;
+  padding: 2px 0;
 }
 .container a.article p {
   color: #888;
   font-size: 14px;
   font-weight: 800;
-  padding-top: 4px 0;
 }
 
 @media screen and (max-width: 599px) {
