--- a/style/article_index.scss
+++ b/style/article_index.scss
@@ -1,15 +1,15 @@
 .container {
-    padding: 40px 20px;
+    padding: 20px;
 
     h1 {
-        margin: 20px 0;
+        margin: 16px 0;
         padding: 0 10px;
         font-size: 26px;
     }
 
     a.article {
         display: block;
-        padding: 34px 10px;
+        padding: 8px 10px;
         border-top: solid #bbb 1px;
 
         &:last-child {
@@ -18,13 +18,13 @@
 
         h2 {
             font-size: 20px;
+            padding: 2px 0;
         }
 
         p {
             color: #888;
             font-size: 14px;
             font-weight: 800;
-            padding-top: 4px 0;
         }
     }
 }
