--- a/themes/myTheme/layouts/partials/head.html
+++ b/themes/myTheme/layouts/partials/head.html
@@ -1,11 +1,42 @@
+<!-- Sass files that always imported. -->
+{{ $basics := slice "default" "header" "footer" }}
+
 <head>
-    <title>OpenStudy</title>
-    {{ $style := resources.Get "sass/default.scss" | toCSS | minify | fingerprint }}
-    <link rel="stylesheet" href="{{ $style.Permalink }}">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>
+        {{ if .Page.IsHome }}
+            OpenStudy
+        {{ else }}
+            {{ .Title }} - OpenStudy
+        {{ end }}
+    </title>
+    <meta name="description" content="{{ .Description }}">
+    <meta name="format-detection" content="telephone=no">
 
-    {{ $style := resources.Get "sass/footer.scss" | toCSS | minify | fingerprint }}
-    <link rel="stylesheet" href="{{ $style.Permalink }}">
+    <link rel="icon" href="/favicon/favicon96.ico" size="96x96">
+    <link rel="apple-touch-icon" href="images/oapple-touch-icon180.png">
 
-    {{ $style := resources.Get "sass/header.scss" | toCSS | minify | fingerprint }}
+    <!-- Google Fonts for Logo -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
+
+    <!-- Basic CSS -->
+    {{ range $basics }}
+    {{ $path := . | printf "sass/%s" | printf "%s.scss" }}
+    {{ $style := resources.Get $path | toCSS | minify | fingerprint }}
     <link rel="stylesheet" href="{{ $style.Permalink }}">
+    {{ end }}
+
+    <!-- Additional CSS -->
+    {{ range .Params.style }}
+        {{ $path := . | printf "sass/%s" | printf "%s.scss" }}
+        {{ $style := resources.Get $path | toCSS | minify | fingerprint }}
+        <link rel="stylesheet" href="{{ $style.Permalink }}">
+    {{ end }}
+
+    <!-- Google Search Console -->
+    <meta name="google-site-verification" content="rYJHGR_uUcxmqkD9mSn79HxxWq4ikIz755zQGjaf87A" />
 </head>
